versioned_docs/version-1.48/self-hosted/install/certificates/cert-manager.mdx
---
title: Setting up certificates with cert-manager and Let's Encrypt
description: Configure TLS certificates for Okteto Self-Hosted using cert-manager and Let’s Encrypt.
sidebar_label: Let’s Encrypt
id: cert-manager
---

# Setting up certificates with cert-manager and Let’s Encrypt

[cert-manager](https://github.com/cert-manager/cert-manager) automates certificate requests from [Let’s Encrypt](https://letsencrypt.org/), a free and automated Certificate Authority.

Okteto requires a wildcard certificate, so you must use a [DNS01](https://cert-manager.io/docs/configuration/acme/dns01/#delegated-domains-for-dns01) auth method in your [Issuer](https://cert-manager.io/docs/concepts/issuer/). See the [list of supported DNS01 providers](https://cert-manager.io/docs/configuration/acme/dns01/) for compatible options.

The Okteto community maintains guides on using cert-manager with different cloud providers:

- [Amazon Route53](https://community.okteto.com/t/how-do-i-configure-okteto-with-cert-manager-and-aws-route53/273/2)
- [Google Cloud DNS](https://community.okteto.com/t/how-do-i-configure-okteto-with-cert-manager-and-google-cloud-dns/274/2)
- [Azure Cloud DNS](https://community.okteto.com/t/how-do-i-configure-okteto-with-cert-manager-and-azure-cloud-dns/275/2)

## Configure Okteto to use your certificate

Create your `Certificate` resource in the namespace where Okteto is installed. Once cert-manager has issued it, the certificate is stored in the secret named by the `Certificate`'s `spec.secretName`. Add the following to your Helm configuration file, replacing `your-ssl-certificate-secret` with that name, to tell Okteto and NGINX to use your certificate:

```yaml title="config.yaml"
wildcardCertificate:
  create: false
  name: your-ssl-certificate-secret

ingress-nginx:
  controller:
    extraArgs:
      default-ssl-certificate: $(POD_NAMESPACE)/your-ssl-certificate-secret
```

:::warning
Both settings are required. `wildcardCertificate.create: false` stops Okteto from generating its self-signed certificate, which also removes the secret that `default-ssl-certificate` points at. If you don't update that argument as well, the ingress controller falls back to its own built-in fake certificate. This fails quietly: cert-manager reports your certificate as `Ready`, and the hosts Okteto creates ingresses for still serve it over SNI, but any request that doesn't match one of those hosts shows a certificate warning.
:::

Finally, [upgrade](self-hosted/manage/upgrade.mdx) your Okteto installation for the new configuration to be applied.

This video tutorial walks through configuring certificates for Okteto using cert-manager and Let's Encrypt:

<figure class="video_container">
  <iframe width="560" height="315" src="https://www.youtube.com/embed/sqfgttiZ24o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
</figure>
